add Virtual Models & listing on frontend
